# secure_stream

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  ss.spec  styles.py
core/: __init__.py  audio_capture.py  audio_capture_fixed.py  camera_capture.py  chat_client.py  chat_server.py  database.py  network_server.py  remote_client.py  screen_capture.py  video_processor.py
resources/: Защита проекта.pptx  Описание проекта.docx  Пояснительная записка.docx  Техническое задание.docx
ui/: main_window.py
ui/tabs/: __init__.py  camera_tab.py  chat_tab.py  remote_client_tab.py  remote_tab.py  screen_tab.py  settings_tab.py
ui/widgets/: __init__.py  chat_widget.py  video_player.py
utils/: config.py
